k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shoppal
  labels:
    name: shoppal
    app.kubernetes.io/part-of: shoppal
